--- a/src/components/PaletaLista.css
+++ b/src/components/PaletaLista.css
@@ -24,6 +24,7 @@
     width: 315px;
     display: flex;
     justify-content: space-around;
+    position: relative;
   }
   
   @media (max-width: 400px) {
@@ -50,7 +51,7 @@
   }
   
   .PaletaListaItem__preco {
-    color: darkviolet;
+    color: rgb(235, 229, 238);
   }
   
   .Acoes {
@@ -78,7 +79,7 @@
   }
   
   .Acoes__adicionar {
-    background-color: darkviolet;
+    background-color: rgb(172, 20, 20);
   }
   
   .Acoes__adicionar--preencher {
@@ -88,4 +89,21 @@
   .PaletaListaItem__foto {
     height: 150px;
     margin-right: -60px;
+  }
+
+  .PaletaListaItem__badge {
+    background-color: rgb(230, 34, 4);
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    vertical-align: middle;
+    position: relative;
+    color: rgb(245, 243, 243);
+    font-size: .8em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    top: -9px;
+    left: -9px;
   }
