--- a/src/components/PaletaLista/PaletaLista.css
+++ b/src/components/PaletaLista/PaletaLista.css
@@ -75,7 +75,7 @@
   }
   
   .Acoes__remover {
-    background-color: red;
+    background-color: rgba(36, 33, 33, 0.614);
   }
   
   .Acoes__adicionar {
