--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -69,6 +69,15 @@
     .Header {
       max-width: 320px;
     }
+  
+
+  .row {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+  }
+
+ 
   }
   
   @media (max-width: 400px) {
@@ -79,8 +88,25 @@
     .row {
       column-gap: 20px;
     }
-  
+  .Logo {
+
+    width: 100%;
+  }
     .Logo__titulo {
       font-size: 1.5em;
     }
   }
+
+  
+.Opcoes {
+  display: flex;
+}
+
+.Paleta {
+  background: none;
+  border: none;
+}
+
+.Paleta__icone {
+  cursor: pointer;
+}
