--- a/src/components/AdicionaPaletaModal/AdicionaPaletaModal.css
+++ b/src/components/AdicionaPaletaModal/AdicionaPaletaModal.css
@@ -21,7 +21,7 @@
   
   .AdicionaPaletaModal div input {
     border: none;
-    background: rgba(255, 255, 255, 0.3);
+    background: rgba(49, 35, 35, 0.3);
     width: 100%;
     margin-left: 15px;
     border-radius: 5px;
@@ -38,9 +38,9 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    background: rgba(255, 255, 255, 0.3);
+    background: rgba(245, 239, 239, 0.719);
     border-radius: 5px;
-    color: darkviolet;
+    color: rgb(0, 0, 211);
     cursor: pointer;
     padding: 5px 10px;
   }
@@ -50,7 +50,7 @@
   }
   
   .AdicionaPaletaModal__enviar {
-    background-color: darkviolet;
+    background-color: rgb(10, 9, 10);
     cursor: pointer;
     color: white;
     width: 100%;
@@ -60,5 +60,5 @@
   }
   
   .AdicionaPaletaModal__enviar:disabled {
-    background-color: gray;
+    background-color: rgb(11, 1, 1);
   }
