--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -105,8 +105,17 @@
 .Paleta {
   background: none;
   border: none;
+  transform: translateY(-3px);
+  border-radius: 10px;
+  transition: all .5s;
+  padding: 0;
 }
 
 .Paleta__icone {
   cursor: pointer;
+  transform: translateY(3px);
 }
+.Paleta--ativa {
+  background: rgba(210, 198, 197, 0.46);
+}
+
