--- a/src/components/PaletaListaItem/PaletaListaItem.css
+++ b/src/components/PaletaListaItem/PaletaListaItem.css
@@ -123,6 +123,14 @@
   .Acoes__adicionar--preencher {
     width: 100%;
   }
+
+  .PaletaListaItem--deletar {
+    box-shadow: 0px 0px 7px rgba(211, 0, 0);
+  }
+  
+  .PaletaListaItem__tag--deletar {
+    background-color: red !important;
+  }
   
   .PaletaListaItem__foto {
     height: 150px;
